- Fixed bug #52211 (iconv() returns part of string on error)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@300894 c90b9560-bf6c-de11-be94-00142212c4b1